Cycles: Lights from instancer not working randomly #117280

Closed
opened 2024-01-18 14:08:59 +01:00 by Simon Thommes · 0 comments
Member

System Information
Operating system: Linux-6.7.0-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-18 00:01, hash: d068407a004c
Worked: (newest version of Blender that worked as expected)

Short description of error

Lamps that are part of an instancer sometimes stop casting any light. Adding a new lamp object and deleting it seems to fix the issue.

Already talked to @Sergey in person about this issue, so I'm marking it as confirmed.

Exact steps for others to reproduce the error
I had this issue happen several times for a while now, but haven't been able to consistently reproduce it.
At the moment it seems like this can be reproduced with this file in the gold production of the Blender Studio:
'pro/assets/chars/mikassa/mikassa-shading.blend' rev. 1166

**System Information** Operating system: Linux-6.7.0-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-18 00:01, hash: `d068407a004c` Worked: (newest version of Blender that worked as expected) **Short description of error** Lamps that are part of an instancer sometimes stop casting any light. Adding a new lamp object and deleting it seems to fix the issue. <video src="/attachments/491ed92f-3c22-43ff-8de8-34e6f302d1da" title="bug-cycles-no_lights-2024-01-18_14.01.01.mp4" controls></video> Already talked to @Sergey in person about this issue, so I'm marking it as confirmed. **Exact steps for others to reproduce the error** I had this issue happen several times for a while now, but haven't been able to consistently reproduce it. At the moment it seems like this can be reproduced with this file in the gold production of the Blender Studio: 'pro/assets/chars/mikassa/mikassa-shading.blend' rev. 1166
Simon Thommes added the
Priority
Normal
Type
Report
Status
Confirmed
labels 2024-01-18 14:09:00 +01:00
Simon Thommes added this to the Render & Cycles project 2024-01-18 14:09:02 +01:00
Germano Cavalcante added the
Module
Render & Cycles
label 2024-01-18 22:33:54 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-19 09:25:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117280
No description provided.