Fix #117280: Cycles: Lights from instancer not working randomly

The issue was caused by light and shadow linking runtime data not
evaluated first time for lights linked to scene indirectly.

Simple solution is to hook up shading component to the instance
operation, so that visibility flag is properly propagated to the
shading component, and the light linking is evaluated.

Do it as non-flushing operation to prevent possible unwanted
re-evaluated of instancers.

Pull Request: https://projects.blender.org/blender/blender/pulls/117301